--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
       <nav>
         <div class="nav-wrapper grey darken-3">
           <a href="#!" class="brand-logo center">heart<i class="material-icons pink-text">favorite</i></a>
-          <a href="#" class="button-collapse" data-activates="mobile-demo"><i class="material-icons grey-text">menu</i></a>
-          <ul class="right hide-on-med-and-down">
+          <a href="#" class="button-collapse hide-on-med-and-up" data-activates="mobile-demo"><i class="material-icons grey-text">menu</i></a>
+          <ul class="right hide-on-small-only">
             <li class="active"><a href="#"><i class="material-icons grey-text">home</i></a></li>
-            <li><a href="#order"><i class="material-icons grey-text">shopping_cart</i></a></li>
+            <li><a href="order.html"><i class="material-icons grey-text">shopping_cart</i></a></li>
           </ul>
           <ul class="side-nav pink" id="mobile-demo">
-            <li><a href="#" class="white-text"><i class="material-icons left">home</i>Home</a></li>
-            <li><a href="#orders" class="white-text"><i class="material-icons left">shopping_cart</i>Cart</a></li>
+            <li><a href="#!" class="white-text"><i class="material-icons left">home</i>Home</a></li>
+            <li><a href="order.html" class="white-text"><i class="material-icons left">shopping_cart</i>Cart</a></li>
           </ul>
         </div>
       </nav>
@@ -36,8 +36,8 @@
     <main>
       <div class="hero valign-wrapper">
         <div class="center card-panel pink hoverable">
-          <h3 class="valign white-text">hearts for sale</h3>
-          <a href="#orders" class="btn white pink-text">BUY</a>
+          <h3 class="valign white-text">organs for sale</h3>
+          <a href="order.html" class="btn white pink-text">BUY</a>
         </div>
       </div>
       <div class="container callouts grey-text text-lighten-2">
@@ -46,7 +46,7 @@
             <i class="material-icons grey-text text-darken-3 large">favorite</i>
             <h5 class="left-align">
               <i class="material-icons pink-text">done</i>
-              It's super swell
+              Best Quality
             </h5>
             <p class="left-align">
               Fewer than 750 million lifetime beats on average, freshness guaranteed!
@@ -56,17 +56,17 @@
             <i class="material-icons grey-text text-darken-3 large">thumb_up</i>
             <h5 class="left-align">
               <i class="material-icons pink-text">done</i>
-              Totes awesome
+              100% Ethical
             </h5>
             <p class="left-align">
-              Smoker's hearts now 50% off. Buy 2 and get 1 lung free.
+              Over 30% of our donor-partners consented to having their organs harvested!
             </p>
           </div>
           <div class="col s12 l4 center-align">
             <i class="material-icons grey-text text-darken-3 large">redeem</i>
             <h5 class="left-align">
               <i class="material-icons pink-text">done</i>
-              The best TBH
+              Lifestyle Driven
             </h5>
             <p class="left-align">
               Ships FREE in a premium midcentury modern walnut box. Great for gifts!
@@ -83,15 +83,15 @@
               <h4>heart <i class="material-icons pink-text">favorite</i></h4>
               <div class="divider grey"></div>
               <p>
-                a place with hearts.
+                Crowdsourced organs on demand
               </p>
             </div>
             <div class="col s12 l3 offset-s6 right center-align">
               <ul class="bottom-links">
-                <li><a class="grey-text" href="#">HOME</a></li>
-                <li><a class="grey-text" href="#order">ORDER</a></li>
-                <li><a class="grey-text" href="#order">LAWSUITS</a></li>
-                <li><a class="grey-text" href="#order">REFURBISHED</a></li>
+                <li><a class="grey-text" href="#!">HOME</a></li>
+                <li><a class="grey-text" href="order.html">ORDER</a></li>
+                <li><a class="grey-text" href="#!">LAWSUITS</a></li>
+                <li><a class="grey-text" href="#!">REFURBISHED</a></li>
             </ul>
             </div>
           </div>
