Refine order page

--- a/order.html
+++ b/order.html
@@ -90,6 +90,46 @@
           </div>
           <div class="col s12 m6 l4">
             <h5 class="center-align">Cart</h5>
+            <table class="highlight bordered">
+              <thead>
+                <tr>
+                  <th>
+                    ITEM
+                  </th>
+                  <th class="right-align">
+                    PRICE
+                  </th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>
+                    item1
+                  </td>
+                  <td class="right-align">
+                    $699
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    item2
+                  </td>
+                  <td class="right-align">
+                    $699
+                  </td>
+                </tr>
+              </tbody>
+              <tfoot>
+                <tr>
+                  <td class="right-align">
+                    Total
+                  </td>
+                  <td class="right-align">
+                    $1398
+                  </td>
+                </tr>
+              </tfoot>
+            </table>
           </div>
         </div>
       </div>
