--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="css/materialize.css" media="screen">
     <link rel="stylesheet" href="css/custom.css" media="screen">
+    <link rel="icon" type="image/png" href="favicon.png">
   </head>
   <body class="grey darken-1">
     <div class="navbar-fixed">
