--- a/order.html
+++ b/order.html
@@ -15,6 +15,7 @@
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="css/materialize.css" media="screen">
     <link rel="stylesheet" href="css/custom.css" media="screen">
+    <link rel="icon" type="image/png" href="favicon.png">
   </head>
   <body class="grey darken-1">
     <div class="navbar-fixed">
@@ -39,7 +40,7 @@
           <div class="col s12 m6 l8">
             <h6 class="center-align grey-text">PRODUCTS</h6>
             <div class="row products">
-              <div class="container col s12 l6">
+              <div class="col s12 l6">
                 <div class="card grey lighten-3 grey-text text-darken-4 hoverable">
                   <div class="card-image">
                     <div class="card-background" id="heart"></div>
@@ -63,7 +64,7 @@
                 </div>
               </div>
 
-              <div class="container col s12 l6">
+              <div class="col s12 l6">
                 <div class="card grey lighten-3 grey-text text-darken-4 hoverable">
                   <div class="card-image">
                     <div class="card-background" id="lungs"></div>
@@ -87,7 +88,7 @@
                 </div>
               </div>
 
-              <div class="container col s12 l6">
+              <div class="col s12 l6">
                 <div class="card grey lighten-3 grey-text text-darken-4 hoverable">
                   <div class="card-image">
                     <div class="card-background" id="tools"></div>
@@ -146,28 +147,16 @@
               </tbody>
               <tfoot>
                 <tr>
-                  <td class="right-align">
-                    Subtotal
-                  </td>
-                  <td class="right-align">
-                    $1398
-                  </td>
+                  <td class="right-align">Subtotal</td>
+                  <td class="right-align">$1398</td>
                 </tr>
                 <tr>
-                  <td class="right-align">
-                    Tax
-                  </td>
-                  <td class="right-align">
-                    $0
-                  </td>
+                  <td class="right-align">Tax</td>
+                  <td class="right-align">$0</td>
                 </tr>
                 <tr>
-                  <td class="right-align">
-                    Total
-                  </td>
-                  <td class="right-align">
-                    $1398
-                  </td>
+                  <td class="right-align">Total</td>
+                  <td class="right-align">$1398</td>
                 </tr>
               </tfoot>
             </table>
@@ -176,7 +165,7 @@
               <div class="input-field">
                 <i class="material-icons prefix">account_circle</i>
                 <input type="text" name="name" id="name">
-                <label for="nameame">First Name</label>
+                <label for="name">First Name</label>
               </div>
               <div class="input-field">
                 <i class="material-icons prefix">phone</i>
