Wire up form and form validation

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
               <ul class="bottom-links">
                 <li><a class="grey-text" href="#!">HOME</a></li>
                 <li><a class="grey-text" href="order.html">ORDER</a></li>
-                <li><a class="grey-text" href="#!">LAWSUITS</a></li>
+                <li><a class="grey-text" href="#!">OaaS</a></li>
                 <li><a class="grey-text" href="#!">REFURBISHED</a></li>
             </ul>
             </div>
